--- a/docs/latex/tex/B_Requisitos.tex
+++ b/docs/latex/tex/B_Requisitos.tex
@@ -143,7 +143,7 @@ A continuación se muestra el diagrama de casos de uso\ref{fig:diagramauso}:
 	\\\cline{2-3}
 	& 2    & Se muestra el navegador con la política.
 	\\\cline{2-3}
-	& 3    & Se pulsa en el botón de 'Sign in'.
+	& 3    & Se pulsa en el botón de `Sign in'.
 	\\\cline{2-3}
 	& 4    & Se indica que cuenta de Google usar, entrando dentro de la aplicación.
 	\\\hline
@@ -161,7 +161,7 @@ A continuación se muestra el diagrama de casos de uso\ref{fig:diagramauso}:
 {
 	Descripción                            & \multicolumn{2}{p{10.25cm}}{Da la capacidad al usuario de navegar entre las ventanas de la aplicación, como salir de la misma en el caso de que así lo requiera.} \\\hline
 	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-2, RF-2.1, RF-2.2, RF-2.3, RF-1.3} \\\cline{1-3}
-	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requsito funcional primero.}   \\\hline
+	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requisito funcional primero.}   \\\hline
 	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
 	& 1    & Deslizamiento horizontal derecho o pulsación en el menú hamburguesa, para mostrar el menú lateral.
 	\\\cline{2-3}
@@ -185,9 +185,9 @@ Descripción                            & \multicolumn{2}{p{10.25cm}}{Dotar al u
 Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-3, RF-3.1, RF-3.2} \\\cline{1-3}
 Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requisito funcional uno.}   \\\hline
 \multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-& 1    & Escoger del menú lateral la parte de 'settings'.
+& 1    & Escoger del menú lateral la parte de `settings'.
 \\\cline{2-3}
-& 2    & Una vez dentro, usar los 'sliders' activar o desactivar las funciones indicadas.
+& 2    & Una vez dentro, usar los `sliders' activar o desactivar las funciones indicadas.
 \\\hline
 Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Ver que los cambios se producen.} \\\hline
 Excepciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.}\\\hline
@@ -205,7 +205,7 @@ Frecuencia                               & Alta \\
 	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-4, RF-4.1, RF-4.2} \\\cline{1-3}
 	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requisito funcional uno.}   \\\hline
 	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-	& 1    & Escoger del menú lateral la parte de 'About me'.
+	& 1    & Escoger del menú lateral la parte de `About me'.
 	\\\cline{2-3}
 	& 2    & Pulsar en los iconbuttons para mostrar el contenido seleccionado en el navegador. Si el botón es el de correo, se tiene que abrir la aplicación correspondiente para mandar un feedback.
 	\\\hline
@@ -221,13 +221,13 @@ Frecuencia                               & Alta \\
 	\multicolumn{3}{l}{Caso de uso 5: Contenido publicitario} \\
 }
 {
-	Descripción                            & \multicolumn{2}{p{10.25cm}}{Durante la ejecución, en ciertas ventanas tiene que estar disponible el contenido publicitario, así como video recompensas para poder continuar con la partida del snake.} \\\hline
+	Descripción                            & \multicolumn{2}{p{10.25cm}}{Durante la ejecución, en ciertas ventanas tiene que estar disponible el contenido publicitario, así como vídeo recompensas para poder continuar con la partida del snake.} \\\hline
 	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-5, RF-5.1, RF-5.2} \\\cline{1-3}
-	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requisito funcional uno. Producir un 'game over' en el juego del snake.}   \\\hline
+	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requisito funcional uno. Producir un `game over' en el juego del snake.}   \\\hline
 	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-	& 1    & Disponible en las ventanas apropiadas. Al ser pulsadas, se debe abrir el navegador o la 'play store'.
+	& 1    & Disponible en las ventanas apropiadas. Al ser pulsadas, se debe abrir el navegador o la `play store'.
 	\\\cline{2-3}
-	& 2    & En el juego del snake, ver el video hasta completar el tiempo requerido del mismo, para que nos den otra vida.
+	& 2    & En el juego del snake, ver el vídeo hasta completar el tiempo requerido del mismo, para que nos den otra vida.
 	\\\hline
 	Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Continuar con la partida del snake.} \\\hline
 	Excepciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.}\\\hline
@@ -251,7 +251,7 @@ Frecuencia                               & Alta \\
 	\\\cline{2-3}
 	& 3    & Si morimos, se puede ver un vídeo para continuar con la partida.
 	\\\cline{2-3}
-	& 4    & En el caso de tener una mejor puntuación se mostrará el formulario para compartirla.
+	& 4    & En el caso de tener una mejor puntuación, se mostrará el formulario para compartirla.
 	\\\hline
 	Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Mostrar el ranking del snake.} \\\hline
 	Excepciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.}\\\hline
@@ -277,7 +277,7 @@ Frecuencia                               & Alta \\
 	\\\cline{2-3}
 	& 4    & Poder mandar mensajes cortos durante el juego.
 	\\\cline{2-3}
-	& 5    & Si se da la situación de final de partida mostrar que jugador es el ganador.
+	& 5    & Si se da la situación de final de partida, mostrar que jugador es el ganador.
 	\\\hline
 	Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.} \\\hline
 	Excepciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.}\\\hline
