--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -49,21 +49,21 @@ Las ventanas de las que consta la aplicación son las siguientes:
 
 \begin{itemize}
 	\tightlist
-	\item Log in~\pageref{login}.
-	\item Home~\pageref{home}.
-	\item About~\pageref{about}.
-	\item Settings~\pageref{settings}.
-	\item Menú de juegos~\pageref{menugames}.
-	\item Snake~\pageref{snake}.
-	\item Ranking~\pageref{rank}.
-	\item Cuatro en raya online menú~\pageref{cuatromenu}:.
-	\subitem Invitar~\pageref{cuatroinvitar}.
-	\subitem Unirse~\pageref{cuatrounir}.
-	\subitem Juego~\pageref{cuatrojuego}.
+	\item Log in, ver pág.~\pageref{login}.
+	\item Home, ver pág.~\pageref{home}.
+	\item About, ver pág.~\pageref{about}.
+	\item Settings, ver pág.~\pageref{settings}.
+	\item Menú de juegos, ver pág.~\pageref{menugames}.
+	\item Snake, ver pág.~\pageref{snake}.
+	\item Ranking, ver pág.~\pageref{rank}.
+	\item Cuatro en raya online menú, ver pág.~\pageref{cuatromenu}:.
+	\subitem Invitar, ver pág.~\pageref{cuatroinvitar}.
+	\subitem Unirse, ver pág.~\pageref{cuatrounir}.
+	\subitem Juego, ver pág.~\pageref{cuatrojuego}.
 \end{itemize}
 
 \subsection{Log in}\label{login}
-Es la primera ventana que nos encontramos cuando lanzamos la aplicación. Es necesario que nos registremos siempre con la cuenta de \emph{Google} que tengamos disponible, ya que muchos de los servicios están en la nube, no esta permitido el acceso mediante anonimato.
+Es la primera ventana que nos encontramos cuando lanzamos la aplicación. Es necesario que nos registremos siempre con la cuenta de \emph{Google} que tengamos disponible, ya que muchos de los servicios están en la nube, no está permitido el acceso mediante anonimato.
 
 \begin{figure}[H]
 	\centering
@@ -71,7 +71,7 @@ Es la primera ventana que nos encontramos cuando lanzamos la aplicación. Es nec
 	\caption{Log in page}\label{fig:loginpage}
 \end{figure}
 
-Cuando pulsamos en el botón de \emph{sign in with Google}, nos aparecerá la ventana siguiente~\ref{fig:formlog}, dónde nos pedirá que ingresemos el usuario de nuestra cuenta de \emph{Google}. También se puede consultar la política de privacidad~\ref{fig:policy}
+Cuando pulsamos en el botón de \emph{sign in with Google}, nos aparecerá la ventana siguiente (ver figura~\ref{fig:formlog}), dónde nos pedirá que ingresemos el usuario de nuestra cuenta de \emph{Google}. También se puede consultar la política de privacidad, como se puede ver en la figura~\ref{fig:policy}
 
 \begin{figure}[H]
 	\centering
@@ -85,11 +85,11 @@ Cuando pulsamos en el botón de \emph{sign in with Google}, nos aparecerá la ve
 	\caption{Política de privacidad}\label{fig:policy}
 \end{figure}
 
-Una vez completemos este proceso, la ventana siguiente a la que nos redirige la aplicación es el Home~\ref{fig:homepage}.
+Una vez completemos este proceso, la ventana siguiente a la que nos redirige la aplicación es el Home, ver figura~\ref{fig:homepage}.
 
 
 \subsection{Home}\label{home}
-Esta página, es donde se muestra el póster del proyecto, además de tener el acceso al menú lateral de la aplicación. Para acceder a este tenemos que deslizar lateralmente a la derecha, y para cerrarlo, tenemos que hacer el proceso inverso deslizando hacia la izquierda o pulsando fuera del menú~\ref{fig:menuhome}. Otra de las formas de entrar a este es pulsando el menú hamburguesa.
+Esta página, es donde se muestra el póster del proyecto, además de tener el acceso al menú lateral de la aplicación. Para acceder a este tenemos que deslizar lateralmente a la derecha, y para cerrarlo, tenemos que hacer el proceso inverso deslizando hacia la izquierda o pulsando fuera del menú, ver figura~\ref{fig:menuhome}. Otra de las formas de entrar a este es pulsando el menú hamburguesa.
 
 \begin{figure}[H]
 	\centering
@@ -103,7 +103,7 @@ Esta página, es donde se muestra el póster del proyecto, además de tener el a
 	\caption{Banner}\label{fig:banner}
 \end{figure}
 
-Como podemos ver en la imagen~\ref{fig:banner}, tenemos un \emph{banner} donde se nos muestra la publicidad, en el caso de que pinchemos en el, nos abrirá el navegador para mostrarnos más datos referentes al producto que se está anunciando. Es algo que aparecerá durante el resto de la aplicación dependiendo de la página en la que nos encontremos.
+Como podemos ver en la figura~\ref{fig:banner}, tenemos un \emph{banner} donde se nos muestra la publicidad, en el caso de que pinchemos en él, nos abrirá el navegador para mostrarnos más datos referentes al producto que se está anunciando. Es algo que aparecerá durante el resto de la aplicación dependiendo de la página en la que nos encontremos.
 
 \begin{figure}[H]
 	\centering
@@ -111,17 +111,17 @@ Como podemos ver en la imagen~\ref{fig:banner}, tenemos un \emph{banner} donde s
 	\caption{Menú lateral}\label{fig:menuhome}
 \end{figure}
  
-Como se aprecia en el menú~\ref{fig:menuhome},  se encuentra la siguiente lista de opciones, dependiendo de cual sea la que se pulse nos redirigirá a la ventana correspondiente:
+Como se aprecia en el menú, ver figura~\ref{fig:menuhome},  se encuentra la siguiente lista de opciones, dependiendo de cual sea la que se pulse nos redirigirá a la ventana correspondiente:
 
 \begin{itemize}
-	\item Home~\ref{fig:homepage}.
-	\item Games~\ref{fig:gamespage}.
-	\item Ranking~\ref{fig:rankpage}.
-	\item Settings~\ref{fig:settingspage}.
-	\item About me~\ref{fig:aboutpage}.
+	\item Home, ver figura~\ref{fig:homepage}.
+	\item Games, ver figura~\ref{fig:gamespage}.
+	\item Ranking, ver figura~\ref{fig:rankpage}.
+	\item Settings, ver figura~\ref{fig:settingspage}.
+	\item About me, ver figura~\ref{fig:aboutpage}.
 \end{itemize}
 
-En el caso de que se quiera salir de la sesión que tenemos abierta, se debe pulsar en nuestra imagen~\ref{fig:mostrarlogout} y aparecerá un cuadro de alerta con las opciones disponibles, se pulsará en \emph{Sign out}~\ref{fig:salir}.
+En el caso de que se quiera salir de la sesión que tenemos abierta, se debe pulsar en nuestra figura~\ref{fig:mostrarlogout} y aparecerá un cuadro de alerta con las opciones disponibles, se pulsará en \emph{Sign out}, ver figura~\ref{fig:salir}.
 
 \begin{figure}[H]
 	\centering
@@ -136,7 +136,7 @@ En el caso de que se quiera salir de la sesión que tenemos abierta, se debe pul
 \end{figure}
 
 \subsection{Settings}\label{settings}
-Este apartado del menú, es para manejar las opciones referentes a la aplicación, como podemos ver~\ref{fig:settingspage}. Cada una de estas, es un \emph{slider} o deslizador, que si está activado, quiere decir que está a \emph{true} o verdadero.
+Este apartado del menú, es para manejar las opciones referentes a la aplicación, como podemos ver en la figura~\ref{fig:settingspage}. Cada una de estas, es un \emph{slider} o deslizador, que si está activado, quiere decir que está a \emph{true} o verdadero.
 
 \begin{figure}[H]
 	\centering
@@ -147,20 +147,20 @@ Este apartado del menú, es para manejar las opciones referentes a la aplicació
 Una descripción de lo que hacen cada uno de los ajustes:
 
 \begin{itemize}
-	\item \textbf{Dark mode:} cambia el color de la aplicación a modo oscuro, con el fin de ahorrar batería o para personas que tengan dificultades visuales~\ref{fig:darkmode}.
+	\item \textbf{Dark mode:} cambia el color de la aplicación a modo oscuro, con el fin de ahorrar batería o para personas que tengan dificultades visuales, ver figura~\ref{fig:darkmode}.
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=0.8\textwidth]{manual/darkmode.jpg}
 		\caption{Dark Mode}\label{fig:darkmode}
 	\end{figure}
-	\item \textbf{Hard mode:} aumenta la velocidad del snake~\ref{fig:snakepage}, para que sea el doble de rápido.
-	\item \textbf{Blocks mode:} reparte bloques a través del tablero del snake~\ref{fig:snakepage}, para tener una dificultad añadida.
-	\item \textbf{Music:} habilita o deshabilita la música durante las partidas del snake~\ref{fig:snakepage}.
-	\item \textbf{Hard mode:} crea dos tuberías por las cuales la serpiente puede teletransportarse en el tablero, durante el  snake~\ref{fig:snakepage}.
+	\item \textbf{Hard mode:} aumenta la velocidad del snake, ver figura~\ref{fig:snakepage}, para que sea el doble de rápido.
+	\item \textbf{Blocks mode:} reparte bloques a través del tablero del snake, en figura~\ref{fig:snakepage}, para tener una dificultad añadida.
+	\item \textbf{Music:} habilita o deshabilita la música durante las partidas del snake, ver figura~\ref{fig:snakepage}.
+	\item \textbf{Hard mode:} crea dos tuberías por las cuales la serpiente puede teletransportarse en el tablero, durante el  snake, en la figura~\ref{fig:snakepage}.
 \end{itemize}
 
 \subsection{About me}\label{about}
-Pretende mostrar la información referente al creador de la aplicación, como muestra el diseño~\ref{fig:aboutpage}. Se aprecia un \emph{corousel}, con imágenes de los lenguajes de programación conocidos y debajo de dicho elementos, unos icono botones, que enlazan con las páginas de interés.
+Pretende mostrar la información referente al creador de la aplicación, como muestra el diseño, ver figura~\ref{fig:aboutpage}. Se aprecia un carrusel, con imágenes de los lenguajes de programación conocidos y debajo de dicho elementos, unos icono botones, que enlazan con las páginas de interés.
 
 \begin{figure}[H]
 	\centering
@@ -187,7 +187,7 @@ En el caso de \emph{Gmail}, nos abre la vista~\ref{fig:mailto}, para mandar un c
 \end{figure}
 
 \subsection{Menú de juegos}\label{menugames}
-En este apartado se muestra una lista con todos los juegos de la colección que están disponibles, la finalidad es que el usuario pueda decidir de una manera sencilla a qué quiere jugar. Por lo que es tan simple como pulsar en la opción correspondiente~\ref{fig:gamespage}.
+En este apartado se muestra una lista con todos los juegos de la colección que están disponibles, la finalidad es que el usuario pueda decidir de una manera sencilla a qué quiere jugar. Por lo que es tan simple como pulsar en la opción correspondiente, ver figura~\ref{fig:gamespage}.
 
 \begin{figure}[H]
 	\centering
@@ -196,7 +196,7 @@ En este apartado se muestra una lista con todos los juegos de la colección que 
 \end{figure}
 
 \subsection{Snake}\label{snake}
-Es el juego de la serpiente~\ref{fig:snakepage}. Cuando se entra el juego permanece a la espera hasta que se toca la pantalla (\emph{onTab}). Una vez se produzca esto comienza la serpiente a moverse. El diseño del tablero, depende de las opciones que se tengan seleccionadas en settings~\ref{fig:settingspage}.
+Es el juego de la serpiente, figura~\ref{fig:snakepage}. Cuando se entra el juego permanece a la espera hasta que se toca la pantalla (\emph{onTab}). Una vez se produzca esto comienza la serpiente a moverse. El diseño del tablero, depende de las opciones que se tengan seleccionadas en settings, en la figura~\ref{fig:settingspage}.
 
 El juego consiste en lograr la mayor puntuación posible comiendo lenguajes de programación que están repartidos de forma aleatoria por toda la superficie disponible del tablero.
 
@@ -218,7 +218,7 @@ Cabe destacar que el menú no está disponible para las ventanas de los juegos, 
 	\caption{Snake game}\label{fig:snakepage}
 \end{figure}
 
-El juego finaliza desplegando la ventana~\ref{fig:gameover}, cuando se da una de las siguientes situaciones:
+El juego finaliza desplegando la ventana, ver figura~\ref{fig:gameover}, cuando se da una de las siguientes situaciones:
 \begin{itemize}
 	\item Impacto en la pared que rodea el tablero.
 	\item Choque contra uno de los bloques repartidos en la superficie.
@@ -232,12 +232,12 @@ El juego finaliza desplegando la ventana~\ref{fig:gameover}, cuando se da una de
 	\caption{Snake game over}\label{fig:gameover}
 \end{figure}
 
-Cuando se produce el \emph{game over}~\ref{fig:gameover}, tenemos 3 opciones de las cuales se debe elegir una:
+Cuando se produce el \emph{game over}, ver figura~\ref{fig:gameover}, tenemos 3 opciones de las cuales se debe elegir una:
 
 \begin{enumerate}
 	\item \textbf{Play Again:} vuelves a jugar la partida con el contador de los puntos a cero.
-	\item \textbf{Submit score:} si se da la situación de una mejora de puntuación, con respecto a anteriores partidas, para el jugador que se encuentra logueado, se enviará al formulario~\ref{fig:rankform} de ingreso de datos.
-	En el caso de que no tengamos mejora, se puede ver el ranking~\ref{fig:rankpage}.
+	\item \textbf{Submit score:} si se da la situación de una mejora de puntuación, con respecto a anteriores partidas, para el jugador que se encuentra logueado, se enviará al formulario, figura~\ref{fig:rankform} de ingreso de datos.
+	En el caso de que no tengamos mejora, se puede ver el ranking, en la figura~\ref{fig:rankpage}.
 	
 	\begin{figure}[H]
 		\centering
@@ -245,9 +245,9 @@ Cuando se produce el \emph{game over}~\ref{fig:gameover}, tenemos 3 opciones de 
 		\caption{Formulario del ranking}\label{fig:rankform}
 	\end{figure}
 	
-	En el formulario se encuentran el campo de correo y puntuación bloqueadas como medida de seguridad, por lo que se deja la opción de añadir un \emph{nick}. Una vez pulsado el botón de \emph{Submit},se redirigirá a la pantalla de ranking~\ref{fig:rankpage}.
+	En el formulario se encuentran el campo de correo y puntuación bloqueadas como medida de seguridad, por lo que se deja la opción de añadir un \emph{nick}. Una vez pulsado el botón de \emph{Submit}, se redirigirá a la pantalla de ranking, ver figura~\ref{fig:rankpage}.
 	
-	\item \textbf{Video:} permite ver un vídeo para volver a continuar con la partida. Esta opción solo está disponible una vez por juego.
+	\item \textbf{Vídeo:} permite ver un vídeo para volver a continuar con la partida. Esta opción solo está disponible una vez por juego.
 	
 		\begin{figure}[H]
 		\centering
@@ -262,7 +262,7 @@ Cuando se produce el \emph{game over}~\ref{fig:gameover}, tenemos 3 opciones de 
 \end{enumerate}
 
 \subsection{Ranking}\label{rank}
-Es una clasificación de jugadores, dependiendo de la puntuación lograda en el juego del snake~\ref{fig:snakepage}. Según qué usuario entre a ver el contenido de este~\ref{fig:rankpage}, se verá una línea de color dorado indicando el nivel obtenido.
+Es una clasificación de jugadores, dependiendo de la puntuación lograda en el juego del snake, ver figura~\ref{fig:snakepage}. Según qué usuario entre a ver el contenido de este, ver figura~\ref{fig:rankpage}, se verá una línea de color dorado indicando el nivel obtenido.
 
 En el podio de los tres primeros jugadores aparecerá una insignia en forma de medalla, destacando el logro conseguido.
 
@@ -273,12 +273,12 @@ En el podio de los tres primeros jugadores aparecerá una insignia en forma de m
 \end{figure}
 
 \subsection{Menú juego cuatro en raya online}\label{cuatromenu}
-Es la pantalla inicial del juego~\ref{fig:cuatromenu}, ya que siendo en modo online, uno de los jugadores debe de ser el creador de la  partida (\emph{invite friend}) y el otro el que se una a la partida creada (\emph{join game}).
+Es la pantalla inicial del juego, ver figura~\ref{fig:cuatromenu}, ya que siendo en modo online, uno de los jugadores debe de ser el creador de la  partida (\emph{invite friend}) y el otro el que se una a la partida creada (\emph{join game}).
 
 Por lo que se encuentran dos botones que redirigen a:
 \begin{itemize}
-	\item Invitar a un amigo~\ref{fig:cuatroinvitar}.
-	\item Unirse a una partida creada~\ref{fig:cuatrounir}.
+	\item Invitar a un amigo, ver figura~\ref{fig:cuatroinvitar}.
+	\item Unirse a una partida creada, figura~\ref{fig:cuatrounir}.
 \end{itemize}
 
 \begin{figure}[H]
@@ -290,7 +290,7 @@ Por lo que se encuentran dos botones que redirigen a:
 \subsubsection{Invitar}\label{cuatroinvitar}
 Cuando se entra en la pantalla, se genera una clave única, que es necesaria para hacer la conexión por parte del invitado. Para ello hay un botón \emph{share} que facilita el compartir la \emph{key}.
 
-Hay disponible un botón de volver, que lo que hace es destruir la clave para salir a la pantalla anterior~\ref{fig:cuatromenu}. Es el mismo efecto que si se da a la pestaña de volver atrás.
+Hay disponible un botón de volver, que lo que hace es destruir la clave para salir a la pantalla anterior, ver figura~\ref{fig:cuatromenu}. Es el mismo efecto que si se da a la pestaña de volver atrás.
 
 
 \begin{figure}[H]
@@ -305,9 +305,9 @@ Hay disponible un botón de volver, que lo que hace es destruir la clave para sa
 	\caption{Compartir clave}\label{fig:sharegame}
 \end{figure}
 
-Cuando se pulsa en el botón de compartir aparece un cuadro de diálogo~\ref{fig:sharegame} mostrando las aplicaciones que facilitan el envío de la clave.
+Cuando se pulsa en el botón de compartir aparece un cuadro de diálogo, ver figura~\ref{fig:sharegame} mostrando las aplicaciones que facilitan el envío de la clave.
 
-En el caso de que el contador del tiempo restante \emph{time left}, llegue a cero es porque se da por hecho que no se recibe respuesta por parte del invitado, saliendo el cuadro de diálogo~\ref{fig:noplayerfound}.
+En el caso de que el contador del tiempo restante \emph{time left}, llegue a cero es porque se da por hecho que no se recibe respuesta por parte del invitado, saliendo el cuadro de diálogo, ver figura~\ref{fig:noplayerfound}.
 
 \begin{figure}[H]
 	\centering
@@ -316,11 +316,11 @@ En el caso de que el contador del tiempo restante \emph{time left}, llegue a cer
 \end{figure}
 
 \subsubsection{Unir}\label{cuatrounir}
-Pantalla con un formulario de entrada de datos~\ref{fig:cuatrounir}, se usa para escribir la clave recibida por parte del compañero o amigo. 
+Pantalla con un formulario de entrada de datos, ver figura~\ref{fig:cuatrounir}, se usa para escribir la clave recibida por parte del compañero o amigo. 
 
-Si se da la situación de que no es la clave correcta se avisará por pantalla~\ref{fig:uniralert}.
+Si se da la situación de que no es la clave correcta se avisará por pantalla, ver figura~\ref{fig:uniralert}.
 
-En el caso de que tengamos una clave válida, se redirigirá hacia la pantalla del juego~\ref{fig:cuatrojuego}.
+En el caso de que tengamos una clave válida, se redirigirá hacia la pantalla del juego, ver figura~\ref{fig:cuatrojuego}.
 
 \begin{figure}[H]
 	\centering
@@ -335,7 +335,7 @@ En el caso de que tengamos una clave válida, se redirigirá hacia la pantalla d
 \end{figure}
 
 \subsubsection{Juego}\label{cuatrojuego}
-Página con el contenido del juego~\ref{fig:cuatrojuego}. Este consiste en formar líneas de longitud cuatro, en cualquiera de las direcciones posibles: diagonal, vertical y horizontal. Nada más entrar en esta pantalla, se produce el sorteo, para saber quién de los dos participantes comienza a jugar~\ref{fig:sorteo}.
+Página con el contenido del juego, ver figura~\ref{fig:cuatrojuego}. Este consiste en formar líneas de longitud cuatro, en cualquiera de las direcciones posibles: diagonal, vertical y horizontal. Nada más entrar en esta pantalla, se produce el sorteo, para saber quién de los dos participantes comienza a jugar, ver figura~\ref{fig:sorteo}.
 
 \begin{figure}[H]
 	\centering
@@ -352,7 +352,7 @@ Página con el contenido del juego~\ref{fig:cuatrojuego}. Este consiste en forma
 La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzando por la parte de arriba hasta abajo:
 
 \begin{itemize}
-	\item Cabecera superior~\ref{fig:cabecera}, se encuentra el rival a batirse, representado mediante una imagen, siendo esta la de la cuenta de \emph{Google}. Dependiendo del color de fondo, se indica si está en su turno o no.
+	\item Cabecera superior, ver figura~\ref{fig:cabecera}, se encuentra el rival a batirse, representado mediante una imagen, siendo esta la de la cuenta de \emph{Google}. Dependiendo del color de fondo, se indica si está en su turno o no.
 	
 	En la parte central hay un espacio para mostrar los mensajes recibidos por parte del contrincante.
 	
@@ -364,7 +364,7 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
 	 	\caption{Zona superior}\label{fig:cabecera}
 	 \end{figure}
  
-	\item En la parte central~\ref{fig:tablero} se dispone el tablero de siete filas por siete columnas. En el caso de que sea nuestro turno, se debe pinchar en la pantalla, donde sea posible colocar una ficha, es decir, que si debajo de la celda se encuentra vacío no será posible colocar la ficha y se deberá proceder a buscar otro sito en el que se pueda.
+	\item En la parte central, ver figura~\ref{fig:tablero}, se dispone el tablero de siete filas por siete columnas. En el caso de que sea nuestro turno, se debe pinchar en la pantalla, donde sea posible colocar una ficha, es decir, que si debajo de la celda se encuentra vacío no será posible colocar la ficha y se deberá proceder a buscar otro sito en el que se pueda.
 	
 	\begin{figure}[H]
 		\centering
@@ -372,7 +372,7 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
 		\caption{Tablero}\label{fig:tablero}
 	\end{figure}
 
-	\item En la parte inferior~\ref{fig:inferior}, se encuentra la imagen del aliado, es decir, puede ser el jugador que se unió o que creó la partida, dependiendo de quién sea el que haya tomado ese rol.
+	\item En la parte inferior, ver figura~\ref{fig:inferior}, se encuentra la imagen del aliado, es decir, puede ser el jugador que se unió o que creó la partida, dependiendo de quién sea el que haya tomado ese rol.
 	
 	Si esta zona se encuentra con el color de fondo distinto de blanco indica que es el turno de este jugador.
 	
@@ -382,7 +382,7 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
 		\caption{Zona personal}\label{fig:inferior}
 	\end{figure}
 
-	\item Campo para introducir mensajes~\ref{fig:mensaje}, está limitado a 15 caracteres, ya que está destinado para mensajes breves o emoticonos.
+	\item Campo para introducir mensajes, ver figura~\ref{fig:mensaje}, está limitado a 15 caracteres, ya que está destinado para mensajes breves o emoticonos.
 	
 	A la derecha de este campo, se encuentra el botón de enviar. Una vez se envía el mensaje, este se deshabilita, para no saturar la línea. Pasados 10 segundos volverá a estar operativo.
 	
@@ -393,7 +393,7 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
 	\end{figure}
 \end{itemize}
 
-En el momento en que se da la situación de fin de juego, salta la alerta para mostrar quién de los dos jugadores es el ganador de la partida, como se puede ver en la imagen siguiente~\ref{fig:finalcuatro}
+En el momento en que se da la situación de fin de juego, salta la alerta para mostrar quién de los dos jugadores es el ganador de la partida, como se puede ver en la imagen siguiente, ver figura~\ref{fig:finalcuatro}
 
 \begin{figure}[H]
 	\centering
